QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog


0.9.91  2024-05-01  A Spring'24 Release Candidate 2.

- Prepping the unthinkable (aka. v1.0.0-rc2)

- Graph: Introducing the View/Thumbview option as a whole graph
  thumbnail overview helper.

- Updated to latest framework level (Qt >= 6.7)


0.9.90  2024-04-10  A Spring'24 Release Candidate.

- Prepping the unthinkable (aka. v1.0.0-rc1)

- Custom color themes are now file based (*.conf); legacy still
  preserved ntl.

- Old generic "Portuguese" translation (pt) has been corrected to  
  the more proper "Portuguese (Brazil)" locale (pt_BR).

- Simplified and shortened the main window title.


0.9.13  2024-01-24  A Winter'24 Release.

- Graph: Make the main canvas background to mid-gray, when on
  non-dark color themes.

- Turkish (tr) translation added.

- Updated copyright headers into the New Year (2024).


0.9.12  2023-09-09  An End-of-Summer'23 Release.

- Setup: disable Settings parameters altogether, except frames/period
  (aka. buffer-size) if running in the so called 'Active' pure-client
  mode (eg. under PipeWire's pw-jack substitution).

- Connections: Fixed an old JACK client/ports aliases malfunction,
  hopefully.

- Graph: Ctrl+left or middle-button click-dragging for panning, is
  now a lot smoother, hopefully.

- Graph: Click-dragging with the mouse middle-button is now used
  for panning only, not to start a selection anymore.

- Preppings to next development cycle (Qt >= 6.6)


0.9.11  2023-06-01  A Spring'23 Release.

- Graph: Soft incremental bounds constraints now imposed to all
  new and old nodes positioning.

- Prepping into the next development cycle (with Qt >= 6.5).


0.9.10  2023-03-23  An Early-Spring'23 Release.

- Setup: revert to previous settings when dismissing the dialog.

- Graph: Attempt to make port labels as short as possible.

- Graph: introducing touch pinch-gesture for zooming.

