@@ -1207,7 +1207,7 @@ Jste si jistý?</translation>
         <translation>Připraven</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation>Barvy - %1</translation>
     </message>
