@@ -1206,7 +1206,7 @@ Está seguro?</translation>
         <translation>Preparado</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation>Colores - %1</translation>
     </message>
