@@ -1207,7 +1207,7 @@ de toutes les applications clientes.
         <translation>Prêt</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation>Couleurs - %1</translation>
     </message>
