@@ -1216,7 +1216,7 @@ Sei sicuro?</translation>
         <translation>Pronto</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation type="unfinished"></translation>
     </message>
