@@ -1207,7 +1207,7 @@ Are you sure?</source>
         <translation>準備できました</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation>色 - %1</translation>
     </message>
