@@ -1208,7 +1208,7 @@ Emin misin?</translation>
         <translation>Hazır</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="642"/>
+        <location filename="../qjackctlGraphForm.cpp" line="646"/>
         <source>Colors - %1</source>
         <translation>Renkler - %1</translation>
     </message>
