@@ -4,6 +4,11 @@ QjackCtl - JACK Audio Connection Kit Qt GUI Interface
 ChangeLog
 
 
+GIT HEAD
+
+- Graph: Introducing thumbview context-menu.
+
+
 0.9.91  2024-05-01  A Spring'24 Release Candidate 2.
 
 - Prepping the unthinkable (aka. v1.0.0-rc2)
